--- a/style.css
+++ b/style.css
@@ -48,6 +48,7 @@ body{
     color: var(--text-color);
     font-weight: 600;
 }
+
 .navbar{
     position: relative;
 }
@@ -60,7 +61,7 @@ body{
 }
 .navbar a:hover,
 .navbar a.active{
-    color: var(--main-color);
+    color: rgb(109, 30, 194);
 }
 #menu-icon{
     font-size: 3.6rem;
@@ -131,6 +132,48 @@ section{
     text-align: center;
     text-align: justify;
 }
+.home-content .btn-box {
+    display: flex;
+    justify-content: space-between;
+    width: 345px;
+    height: 50px;
+}
+.btn-box a {
+    position: relative;
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    width: 150px;
+    height: 100%;
+    background: #00abf0;
+    border: 2px solid #00abf0;
+    border-radius: 8px;
+    font-size: 19px;
+    color: #081b29;
+    text-decoration: none;
+    font-weight: 600;
+    letter-spacing: 1px;
+    z-index: 1;
+    overflow: hidden;
+}
+.btn-box a:nth-child(2){
+    background: transparent;
+    color: #00abf0;
+}
+.btn-box a::before{
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 0;
+    height: 100%;
+    background: #081b29;
+    z-index: -1;
+    transition: .5s;
+}
+.btn-box a:hover::before{
+    width: 100%;
+}
 .btn-box{
     position: relative;
     display: flex;
@@ -161,7 +204,7 @@ section{
 }
 .btn-box .btn:nth-child(2){
     background: transparent;
-    color: rgb(38, 38, 201);
+    color: #00abf0;
 }
 .btn-box .btn:nth-child(2):hover{
     color: var(--bg-color);
@@ -569,22 +612,6 @@ width: 100%;
     color: var(--bg-color);
 
 }
-.animate{
-    position: absolute;
-    top: 0;
-    right: 0;
-    width: 100%;
-    height: 100%;
-    /* background: yellowgreen; */
-    z-index: 98;
-}
-.logo .animate,
-.navbar .animate{
-    animation: showRight 1s ease forwards;
-    animation-delay: calc(.3s *);
-}
-
-
 @media (max-width: 1200px){
     html {
         font-size: 55%;
@@ -727,4 +754,4 @@ width: 100%;
     100%{
         transform: translate(-50%, -50%) rotateY(90deg) ;
     }
-}
+ } 
